# TensorGhostPenalty

./: .gitignore  CMakeLists.txt  README.md
doc/: .gitignore  SiamCSE.tex  coverP.tex  literature.bib  preamble.tex  reviewers.tex  revision2.md  tensor_ghost_penalty.soc  tensor_ghost_penalty.tex
doc/figs/: balls.pvsm
doc/results/: convergence_2D_d1.txt  convergence_2D_d2.txt  convergence_2D_d3.txt  one_cell_2d.txt  one_cell_3d.txt  vmult_multiple_2D_d1.txt  vmult_multiple_2D_d1_alt.txt  vmult_multiple_2D_d2.txt  vmult_multiple_2D_d2_alt.txt  vmult_multiple_2D_d3.txt  vmult_multiple_2D_d3_alt.txt  vmult_multiple_3D_d1-old.txt  vmult_multiple_3D_d1.txt  vmult_multiple_3D_d1_alt.txt  vmult_multiple_3D_d2.txt  vmult_multiple_3D_d2_alt.txt  vmult_multiple_3D_d3.txt  vmult_multiple_3D_d3_alt.txt  vmult_ref_mult_2D_d1.txt  vmult_ref_mult_2D_d2.txt  vmult_ref_mult_2D_d3.txt  vmult_ref_mult_3D_d1.txt  vmult_ref_mult_3D_d2.txt  vmult_ref_mult_3D_d3.txt  vmult_single_2D_d1.txt  vmult_single_2D_d2.txt  vmult_single_2D_d3.txt  vmult_single_3D_d1.txt  vmult_single_3D_d2.txt  vmult_single_3D_d3.txt
execs/: cell_comparison.cc  matrix_free_global.cc
include/: closest_point.h  cut_cell_generator.h  dof_utilities.h  exact_solution.h  ghost_penalty_operator.h  local_operators.h  matrix_free_operator.h  matrix_free_sbm_operator.h  renumber_lexycogrhaphic.h  sbm_local_operator.h
